assets/css/style.css
/* ... */
.width-25 {
  width: 25%;
}





























@media only screen and (max-width: 575px) {
  /* Firefox-Hack */
  /* body {
    overflow: hidden;
  } */

  /* NAVBAR RESPONSIVE */
  .navbar .main-logo-navbar {
    width: 104px;
  }
  
  /* Hero RESPONSIVE */
  #home .custom-container-fluid {
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: stretch;
  }
  
  #hero {
    height: 600px;
    font-family: var(--font-montserrat);
    background-image: none;
  }

  #hero .hero-app-section {
    width: 100%;
    height: auto;
  }  
  
  #hero .hero-app-section .app-image {
    width: 80%;
    height: auto;
    background-position: center;
    background-position: center;
    background-repeat: no-repeat;
    position: absolute;
    top: 160%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding-bottom: 180px;
  }

  .hero-description h5 {
    line-height: 24px;
    letter-spacing: 0.1px;
    color: #737373;
    font-weight: 700;
    font-size: 18px;
  }
  
  .hero-description h1 {
    line-height: 46.5px;
    width: 390px;
    letter-spacing: 0.2px;
    color: #252B42;
    font-weight: 700;
    font-size: 36px;
    padding: 10px 0;
  }
  
  .hero-description p {
    font-size: 24px;
    font-weight: 500;
    padding: 8px 0;
    line-height: 38px;
    color: #737373;
    letter-spacing: 0.2px;
  }

  .hero-cta {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .hero-cta .button-orange-primary {
    display: block;
    margin-bottom: -10px;
    background-color: var(--main-color);
    color: #fff;
    font-family: var(--font-montserrat);
    font-weight: 600;
    text-align: center;
    line-height: 36px;
    font-size: 20px;
    width: 236px;
    border: none;
    border-radius: 30px;
  }
  
  .hero-cta .button-transparent-primary {
    background-color: transparent;
    color: var(--main-color);
    font-family: var(--font-montserrat);
    font-weight: 600;
    text-align: center;
    line-height: 36px;
    font-size: 20px;
    width: 236px;
    border: 1px solid var(--main-color);
    border-radius: 30px;
  }


  /* HR RESPONSIVE */
  .horizontal-parent {
    height: 600px;
    width: auto;
    position: relative;
  }

  .hr-element {
    width: 80%;
    height: 3px;
    background-color: #E4E4E4;
    position: absolute;
    bottom: 0;
    margin: 0;
    border: none;
  }


  /* FAQ RESPONSIVE */
  #faq {
    font-family: var(--font-montserrat);
    padding: 50px 0;
    text-align: center;
  }

  .width-25 {
    width: 50%;
  }

  #faq .faq-sm-content-reverse {
    flex-direction: column-reverse;
    justify-content: center;
  }

  #faq .faq-sm-content-normal {
    flex-direction: column;
    justify-content: center;
  }

  #faq h1 {
    font-family: var(--font-poppins);
    text-align: center;
    font-weight: 600;
    font-size: 35px;
    letter-spacing: 0.2px;
    margin-bottom: 36px;
  }

  #faq .text-desc {
    width: auto;
  }

  #faq .phone-image {
    width: 100%;
    height: auto;
    display: block !important;
    margin-left: auto;
    margin-right: auto;
    overflow: hidden;
    margin-top: -180px;
    margin-bottom: 100px;
  }
  
  #faq .phone-image img {
    width: 80%;
    overflow: hidden;
    display: block !important;
    margin-left: auto !important;
    margin-right: auto !important;
  }
  
  #faq .text-desc h4 {
    color: var(--main-color);
    font-size: 24px;
    font-weight: 700;
    line-height: 30px;
    display: inline-block;
    letter-spacing: 0.1px;
    margin: 28px 0;
  }

  #faq .text-desc h2 {
    font-weight: 700;
    font-size: 36px;
    line-height: 57px;
    letter-spacing: 0.2px;
    margin-bottom: 30px;
  }

  #faq .text-desc p {
    color: #737373;
    font-weight: 500;
    font-size: 22px;
    line-height: 38px;
    letter-spacing: 0.2px;
  }
    
  /* Download section */

  #download {
    background-image: none;
    background-color: #252B42;
    height: 750px;
    padding: 14rem 0;
  }

  #download .download-description {
    font-family: var(--font-montserrat);
    color: #Fff;
    width: 100%;
  }

  #download .download-description h1 {
    width: 310px;
    font-size: 40px;
    line-height: 57px;
    letter-spacing: 0.2px;
    font-weight: 700;
    padding: 20px 0;
  }

  #download .download-description p {
    font-size: 24px;
    font-weight: 500;
    line-height: 38px;
    letter-spacing: 0.2px;
    color: #BDBDBD;
  }

  #download .download-cta {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 24px;
  }

  #download .download-cta .button-download-playstore {
    width: 142px;
    height: 64px;
    padding: 20px 40px;
    border: none;
    border-radius: 12px;
    color: #fff;
    background-color: var(--main-color);
    font-size: 16px;
    font-weight: 600;
  }

  #download .download-cta .button-download-appstore {
    width: 180px;
    height: 64px;
    padding: 20px 40px;
    border: 3px solid #fff;
    border-radius: 12px;
    color: #fff;
    background-color: transparent;
    font-size: 16px;
    font-weight: 600;
  }

  

  /* Footer RESPONSIVE */
  #footer-contact {
    position: relative;
    padding: 100px 0;
  }

  .footer-copyright {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    text-align: center;
  }
  
  #footer-contact .footer-copyright h4 {
    font-family: var(--font-poppins);
    font-size: 14px;
    line-height: 18px;
    letter-spacing: 0.2px;
    color: #5C5C5C;
  }
  
  #footer-contact .footer-logo {
    width: auto;
    height: auto;
  }
  
  #footer-contact .footer-logo img {
    display: none;
  }
  
  #footer-contact .footer-smedia {
    display: flex;
    justify-content: center;
    margin: auto;
    position: absolute;
    transform: translate(-50%, -50%);
    top: 25%;
    left: 50%;
  }

  
}
/* ... */

